renamed door to out path
* the concept of a door is neither defined for mazes, nor for graphs
* out path better captures the notion of a potential path
between two maze cards or nodes
* out_path in python, outPaths in java-script
