# backend/api.yaml
@@ -220,299 +220,299 @@ components:
                 maze:
                     mazeSize: 11
                     mazeCards:
-                        - doors: NE
+                        - outPaths: NE
                           id: 11
                           location: 
                           rotation: 0
-                        - doors: NE
+                        - outPaths: NE
                           id: 34
                           location:
                             column: 0
                             row: 0
                           rotation: 90
-                        - doors: NS
+                        - outPaths: NS
                           id: 33
                           location:
                             column: 1
                             row: 0
                           rotation: 0
-                        - doors: NES
+                        - outPaths: NES
                           id: 35
                           location:
                             column: 2
                             row: 0
                           rotation: 90
-                        - doors: NE
+                        - outPaths: NE
                           id: 2
                           location:
                             column: 3
                             row: 0
                           rotation: 90
-                        - doors: NES
+                        - outPaths: NES
                           id: 36
                           location:
                             column: 4
                             row: 0
                           rotation: 90
-                        - doors: NS
+                        - outPaths: NS
                           id: 25
                           location:
                             column: 5
                             row: 0
                           rotation: 0
-                        - doors: NE
+                        - outPaths: NE
                           id: 37
                           location:
                             column: 6
                             row: 0
                           rotation: 180
-                        - doors: NS
+                        - outPaths: NS
                           id: 26
                           location:
                             column: 0
                             row: 1
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 14
                           location:
                             column: 1
                             row: 1
                           rotation: 0
-                        - doors: NS
+                        - outPaths: NS
                           id: 31
                           location:
                             column: 2
                             row: 1
                           rotation: 270
-                        - doors: NES
+                        - outPaths: NES
                           id: 20
                           location:
                             column: 3
                             row: 1
                           rotation: 90
-                        - doors: NE
+                        - outPaths: NE
                           id: 13
                           location:
                             column: 4
                             row: 1
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 5
                           location:
                             column: 5
                             row: 1
                           rotation: 0
-                        - doors: NS
+                        - outPaths: NS
                           id: 30
                           location:
                             column: 6
                             row: 1
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 38
                           location:
                             column: 0
                             row: 2
                           rotation: 0
-                        - doors: NES
+                        - outPaths: NES
                           id: 18
                           location:
                             column: 1
                             row: 2
                           rotation: 0
-                        - doors: NES
+                        - outPaths: NES
                           id: 39
                           location:
                             column: 2
                             row: 2
                           rotation: 0
-                        - doors: NE
+                        - outPaths: NE
                           id: 10
                           location:
                             column: 3
                             row: 2
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 40
                           location:
                             column: 4
                             row: 2
                           rotation: 90
-                        - doors: NS
+                        - outPaths: NS
                           id: 21
                           location:
                             column: 5
                             row: 2
                           rotation: 90
-                        - doors: NES
+                        - outPaths: NES
                           id: 41
                           location:
                             column: 6
                             row: 2
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 19
                           location:
                             column: 0
                             row: 3
                           rotation: 180
-                        - doors: NE
+                        - outPaths: NE
                           id: 0
                           location:
                             column: 1
                             row: 3
                           rotation: 0
-                        - doors: NS
+                        - outPaths: NS
                           id: 27
                           location:
                             column: 2
                             row: 3
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 12
                           location:
                             column: 3
                             row: 3
                           rotation: 180
-                        - doors: NE
+                        - outPaths: NE
                           id: 7
                           location:
                             column: 4
                             row: 3
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 17
                           location:
                             column: 5
                             row: 3
                           rotation: 180
-                        - doors: NS
+                        - outPaths: NS
                           id: 32
                           location:
                             column: 6
                             row: 3
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 42
                           location:
                             column: 0
                             row: 4
                           rotation: 0
-                        - doors: NES
+                        - outPaths: NES
                           id: 16
                           location:
                             column: 1
                             row: 4
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 43
                           location:
                             column: 2
                             row: 4
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 6
                           location:
                             column: 3
                             row: 4
                           rotation: 90
-                        - doors: NES
+                        - outPaths: NES
                           id: 44
                           location:
                             column: 4
                             row: 4
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 15
                           location:
                             column: 5
                             row: 4
                           rotation: 180
-                        - doors: NES
+                        - outPaths: NES
                           id: 45
                           location:
                             column: 6
                             row: 4
                           rotation: 180
-                        - doors: NS
+                        - outPaths: NS
                           id: 24
                           location:
                             column: 0
                             row: 5
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 9
                           location:
                             column: 1
                             row: 5
                           rotation: 0
-                        - doors: NE
+                        - outPaths: NE
                           id: 4
                           location:
                             column: 2
                             row: 5
                           rotation: 270
-                        - doors: NS
+                        - outPaths: NS
                           id: 23
                           location:
                             column: 3
                             row: 5
                           rotation: 270
-                        - doors: NS
+                        - outPaths: NS
                           id: 22
                           location:
                             column: 4
                             row: 5
                           rotation: 270
-                        - doors: NS
+                        - outPaths: NS
                           id: 29
                           location:
                             column: 5
                             row: 5
                           rotation: 90
-                        - doors: NE
+                        - outPaths: NE
                           id: 8
                           location:
                             column: 6
                             row: 5
                           rotation: 180
-                        - doors: NE
+                        - outPaths: NE
                           id: 46
                           location:
                             column: 0
                             row: 6
                           rotation: 0
-                        - doors: NS
+                        - outPaths: NS
                           id: 28
                           location:
                             column: 1
                             row: 6
                           rotation: 90
-                        - doors: NES
+                        - outPaths: NES
                           id: 47
                           location:
                             column: 2
                             row: 6
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 3
                           location:
                             column: 3
                             row: 6
                           rotation: 90
-                        - doors: NES
+                        - outPaths: NES
                           id: 48
                           location:
                             column: 4
                             row: 6
                           rotation: 270
-                        - doors: NE
+                        - outPaths: NE
                           id: 1
                           location:
                             column: 5
                             row: 6
                           rotation: 180
-                        - doors: NE
+                        - outPaths: NE
                           id: 49
                           location:
                             column: 6
@@ -544,15 +544,16 @@ components:
             type: "object"
             description: "Each maze card is identified with a unique identifier. Its location is null if it is the leftover card."
             properties:
-                doors:
+                outPaths:
                     type: string
                     description: "specifies the type of the maze card by listing its outgoing paths.
                     The string is a subsequence of 'NESW' of length at least two. Each latter stands for one
                     of the directions north, east, south, and west, respectively.
-                    Currently, all maze cards are either straights ('NS'), corners ('NE') or t-junctions ('NES')."
+                    Either straights ('NS'), corners ('NE'), t-junctions ('NES'), or crossroads ('NESW')."
                     enum:
                         - "NE"
                         - "NES"
+                        - "NESW"
                         - "NS"
                 id:
                     type: integer
