# backend/server/mapper/constants.py
@@ -5,7 +5,7 @@ MAZE_CARDS = "mazeCards"
 MAZE = "maze"
 ID = "id"
 MAZE_CARD_ID = "mazeCardId"
-DOORS = "doors"
+OUT_PATHS = "outPaths"
 LOCATION = "location"
 ROTATION = "rotation"
 ROW = "row"
